fixed minor spacing issue

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -7,7 +7,7 @@
     align-items: center;
     padding: 20px;
     flex-direction: column;
-    width: 100%;
+    /* width: 100%; */
 }
 
 .nav-link {
